--- a/employee-report-upload.html
+++ b/employee-report-upload.html
@@ -48,14 +48,14 @@
         <div class="navbar-header pull-left">
           <a href="#" class="navbar-brand">
             <small>
-              <img src="assets/img/logo.png" alt="" />
+              <img src="assets/img/logo-color.png" alt="" />
             </small>
           </a>
         </div>
         <!-- /Navbar Barnd -->
         <!-- Sidebar Collapse -->
         <div class="sidebar-collapse" id="sidebar-collapse">
-          <i class="collapse-icon fa fa-bars"></i>
+          <i class="collapse-icon fa fa-caret-down"></i>
         </div>
         <!-- /Sidebar Collapse -->
         <!-- Account Area and Settings --->
@@ -350,7 +350,7 @@
         </li>
         <li>
           <a href="employee-jobs.html">
-            <i class="menu-icon fa fa-tasks red"></i>
+            <i class="menu-icon fa fa-briefcase red"></i>
             <span class="menu-text"> Jobs </span>
           </a>
         </li>
@@ -359,12 +359,6 @@
             <i class="menu-icon fa fa-upload green"></i>
             <span class="menu-text"> Upload Reports </span>
           </a>
-        </li>
-        <li>
-            <a href="employee-profile.html">
-                <i class="menu-icon fa fa-user yellow"></i>
-                <span class="menu-text"> View Profile </span>
-            </a>
         </li>
       </ul>
       <!-- /Sidebar Menu -->
@@ -611,35 +605,22 @@
       <!-- Page Breadcrumb -->
       <div class="page-breadcrumbs">
         <ul class="breadcrumb">
-          <li>
+          <li class="active">
             <i class="fa fa-home"></i>
-            <a href="#">Home</a>
+            <a href="#">Upload Document</a>
           </li>
-          <li class="active">Upload Report</li>
         </ul>
       </div>
       <!-- /Page Breadcrumb -->
-      <!-- Page Header -->
-      <div class="page-header position-relative">
-        <div class="header-title">
-          <h1 class="theme-color">
-            Upload Report
-          </h1>
-        </div>
-        <!--Header Buttons
-        <div class="header-buttons">
-        <a class="sidebar-toggler" href="#">
-        <i class="fa fa-arrows-h"></i>
-      </a>
-    </div>
-    Header Buttons End-->
-  </div>
-  <!-- /Page Header -->
+
   <!-- Page Body -->
   <div class="page-body">
     <div class="row">
       <div class="col-md-12 col-lg-12">
         <div class="page-view">
+          <div class="form-title">
+            Upload Document
+          </div>
           <form id="upload" method="post" action="upload.php" enctype="multipart/form-data">
             <div id="drop">
               Drop Here
