--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -3,7 +3,7 @@
 <!--Head-->
 <head>
   <meta charset="utf-8" />
-  <title>Employee Register</title>
+  <title>Forgot Password</title>
 
   <meta name="description" content="login page" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -37,26 +37,18 @@
         <img src="assets/img/logo-color.png" class="img-responsive">
         <hr class="login-hr" />
       </div>
-      <div class="loginbox-title theme-color">Employee Registration</div>
+      <div class="loginbox-title theme-color">Forgot Password</div>
       <div class="loginbox-textbox">
-        <input type="text" class="form-control" placeholder="Email Id" />
-      </div>
-      <div class="loginbox-textbox">
-        <input type="password" class="form-control" placeholder="Choose Password" />
+        <input type="password" class="form-control" placeholder="New Password" />
       </div>
       <div class="loginbox-textbox">
         <input type="password" class="form-control" placeholder="Confirm Password" />
       </div>
       <div class="loginbox-textbox no-padding-bottom">
-  <div class="checkbox">
-    <label>
-      <input type="checkbox" class="colored-primary" checked="checked">
-      <span class="text white">I agree to the Company <a class="themeprimary">Terms and Conditions.</span>
-    </label>
-  </div>
+
 </div>
       <div class="loginbox-submit text-center">
-        <input type="button" class="btn btn-block cust-btn" value="Register">
+        <input type="button" class="btn btn-block cust-btn" value="Save">
       </div>
     </div>
 
