--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
                 <div class="navbar-header pull-left">
                     <a href="#" class="navbar-brand">
                         <small>
-                            <img src="assets/img/logo.png" alt="" />
+                            <img src="assets/img/logo-color.png" alt="" />
                         </small>
                     </a>
                 </div>
                 <!-- /Navbar Barnd -->
                 <!-- Sidebar Collapse -->
                 <div class="sidebar-collapse" id="sidebar-collapse">
-                    <i class="collapse-icon fa fa-bars"></i>
+                    <i class="collapse-icon fa fa-caret-down"></i>
                 </div>
                 <!-- /Sidebar Collapse -->
                 <!-- Account Area and Settings --->
@@ -332,7 +332,7 @@
             <!-- Page Sidebar -->
             <div class="page-sidebar" id="sidebar">
                 <!-- Page Sidebar Header-->
-                <div class="sidebar-header-wrapper">
+              <div class="sidebar-header-wrapper">
                     <input type="text" class="searchinput" />
                     <i class="searchicon fa fa-search"></i>
                     <div class="searchhelper">Search Reports, Charts, Emails or Notifications</div>
@@ -356,7 +356,7 @@
                   <li>
                     <a href="client.html">
                       <i class="menu-icon glyphicon glyphicon-copyright-mark green"></i>
-                      <span class="menu-text"> Client </span>
+                      <span class="menu-text"> Clients </span>
                     </a>
                   </li>
                   <li>
@@ -369,12 +369,6 @@
                     <a href="payment-settings.html">
                       <i class="menu-icon fa fa-money blue"></i>
                       <span class="menu-text"> Payment Settings </span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="profile.html">
-                      <i class="menu-icon fa fa-user purple"></i>
-                      <span class="menu-text"> View Profile </span>
                     </a>
                   </li>
                 </ul>
@@ -622,30 +616,14 @@
                 <!-- Page Breadcrumb -->
                 <div class="page-breadcrumbs">
                     <ul class="breadcrumb">
-                        <li>
+                        <li class="active">
                             <i class="fa fa-home"></i>
-                            <a href="#">Home</a>
+                            <a href="#">Dashboard</a>
                         </li>
-                        <li class="active">Dashboard</li>
                     </ul>
                 </div>
                 <!-- /Page Breadcrumb -->
-                <!-- Page Header -->
-                <div class="page-header position-relative">
-                    <div class="header-title">
-                        <h1 class="theme-color">
-                            Dashboard
-                        </h1>
-                    </div>
-                    <!--Header Buttons
-                    <div class="header-buttons">
-                        <a class="sidebar-toggler" href="#">
-                            <i class="fa fa-arrows-h"></i>
-                        </a>
-                      </div>
-                    Header Buttons End-->
-                </div>
-                <!-- /Page Header -->
+
                 <!-- Page Body -->
                 <div class="page-body">
                   <div class="row">
@@ -653,7 +631,7 @@
                       <div class="dash-card">
                         <div class="dash-content">
                         <div class="dash-card-yellow">
-                            <i class="icon fa fa-user"></i>
+                          <img src="assets/img/card-icon-1.png" class="img-responsive">
                         </div>
                         <div class="dash-card-right">
                           <h3 class="yellow">Total Orders</h3>
@@ -666,7 +644,7 @@
                       <div class="dash-card">
                         <div class="dash-content">
                         <div class="dash-card-green">
-                            <i class="icon fa fa-thumbs-up"></i>
+                          <img src="assets/img/card-icon-2.png" class="img-responsive">
                         </div>
                         <div class="dash-card-right">
                           <h3 class="theme-color">Apporved Orders</h3>
@@ -679,7 +657,7 @@
                       <div class="dash-card">
                         <div class="dash-content">
                         <div class="dash-card-red">
-                            <i class="icon fa fa-ban"></i>
+                            <img src="assets/img/card-icon-3.png" class="img-responsive">
                         </div>
                         <div class="dash-card-right">
                           <h3 class="red">Rejected Orders</h3>
@@ -692,11 +670,11 @@
                       <div class="dash-card">
                         <div class="dash-content">
                         <div class="dash-card-green">
-                            <i class="icon fa fa-user"></i>
+                            <img src="assets/img/card-icon-4.png" class="img-responsive">
                         </div>
                         <div class="dash-card-right">
-                          <h3 class="theme-color">Key Metrics</h3>
-                          <h4>80</h4>
+                          <h3 class="purple">Total Revenue</h3>
+                          <h4>$80000</h4>
                         </div>
                       </div>
                       </div>
@@ -715,7 +693,7 @@
                                       <div class="widget-body  no-padding">
                                           <div class="tickets-container">
                                               <ul class="tickets-list scrollbar style-1">
-                                                  <li class="ticket-item">
+                                                  <li class="ticket-item ticket-item-green">
                                                       <div class="row">
                                                           <div class="ticket-user col-lg-7 col-sm-12">
                                                               <img src="assets/img/user.png" class="user-avatar">
@@ -730,14 +708,14 @@
                                                           </div>
                                                           <div class="ticket-type  col-lg-2 col-sm-6 col-xs-12">
                                                               <span class="divider hidden-xs"></span>
-                                                              <span class="type">Issue</span>
+                                                              <span class="type">Payment</span>
                                                           </div>
-                                                          <div class="ticket-state bg-palegreen">
-                                                              <i class="fa fa-check"></i>
+                                                          <div class="ticket-approve">
+                                                              <img src="assets/img/approve-icon-1.png" class="img-responsive">
                                                           </div>
                                                       </div>
                                                   </li>
-                                                  <li class="ticket-item">
+                                                  <li class="ticket-item ticket-item-green">
                                                       <div class="row">
                                                           <div class="ticket-user col-lg-7 col-sm-12">
                                                               <img src="assets/img/user.png" class="user-avatar">
@@ -754,12 +732,12 @@
                                                               <span class="divider hidden-xs"></span>
                                                               <span class="type">Payment</span>
                                                           </div>
-                                                          <div class="ticket-state bg-palegreen">
-                                                              <i class="fa fa-check"></i>
+                                                          <div class="ticket-approve">
+                                                              <img src="assets/img/approve-icon-1.png" class="img-responsive">
                                                           </div>
                                                       </div>
                                                   </li>
-                                                  <li class="ticket-item">
+                                                  <li class="ticket-item ticket-item-red">
                                                       <div class="row">
                                                           <div class="ticket-user col-lg-7 col-sm-12">
                                                               <img src="assets/img/user.png" class="user-avatar">
@@ -776,12 +754,12 @@
                                                               <span class="divider hidden-xs"></span>
                                                               <span class="type">Issue</span>
                                                           </div>
-                                                          <div class="ticket-state bg-darkorange">
-                                                              <i class="fa fa-times"></i>
+                                                          <div class="ticket-rejected">
+                                                              <img src="assets/img/rejected-icon-1.png" class="img-responsive">
                                                           </div>
                                                       </div>
                                                   </li>
-                                                  <li class="ticket-item">
+                                                  <li class="ticket-item ticket-item-green">
                                                       <div class="row">
                                                           <div class="ticket-user col-lg-7 col-sm-12">
                                                               <img src="assets/img/user.png" class="user-avatar">
@@ -798,12 +776,12 @@
                                                               <span class="divider hidden-xs"></span>
                                                               <span class="type">Payment</span>
                                                           </div>
-                                                          <div class="ticket-state bg-palegreen">
-                                                              <i class="fa fa-check"></i>
+                                                          <div class="ticket-approve">
+                                                              <img src="assets/img/approve-icon-1.png" class="img-responsive">
                                                           </div>
                                                       </div>
                                                   </li>
-                                                  <li class="ticket-item">
+                                                  <li class="ticket-item ticket-item-green">
                                                       <div class="row">
                                                           <div class="ticket-user col-lg-7 col-sm-12">
                                                               <img src="assets/img/user.png" class="user-avatar">
@@ -818,10 +796,10 @@
                                                           </div>
                                                           <div class="ticket-type  col-lg-2 col-sm-6 col-xs-12">
                                                               <span class="divider hidden-xs"></span>
-                                                              <span class="type">Info</span>
+                                                              <span class="type">Payment</span>
                                                           </div>
-                                                          <div class="ticket-state bg-yellow">
-                                                              <i class="fa fa-info"></i>
+                                                          <div class="ticket-approve">
+                                                              <img src="assets/img/approve-icon-1.png" class="img-responsive">
                                                           </div>
                                                       </div>
                                                   </li>
@@ -841,12 +819,12 @@
                               </div><!--Widget Header-->
                               <div class="widget-body no-padding">
                                   <div class="task-container">
-                                      <div class="task-search">
+                                      <!-- <div class="task-search">
                                           <span class="input-icon">
                                               <input type="text" class="form-control" placeholder="Search Work Order">
                                               <i class="fa fa-search gray"></i>
                                           </span>
-                                      </div>
+                                      </div> -->
                                       <div class="scrollbar style-1 scroll-admin">
                                       <ul class="tasks-list ">
                                           <li class="task-item">
@@ -862,7 +840,7 @@
                                                   </span>
                                               </div>
                                               <div class="task-time">1 hour ago</div>
-                                              <div class="task-body">Ask to the sysadmins to install Python 3 on the server and run it</div>
+                                              <div class="task-body">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </div>
                                               <div class="task-creator"><a href="">Cameron Hetfield</a></div>
                                               <div class="task-assignedto">assigned to you</div>
                                           </li>
@@ -879,7 +857,7 @@
                                                   </span>
                                               </div>
                                               <div class="task-time">2 hours ago</div>
-                                              <div class="task-body">Write documentation for the new API with test and deploy specifications</div>
+                                              <div class="task-body">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </div>
                                               <div class="task-creator"><a href="">Behrang Nitsche</a></div>
                                               <div class="task-assignedto">assigned to you</div>
                                           </li>
@@ -896,7 +874,7 @@
                                                   </span>
                                               </div>
                                               <div class="task-time">yesterday</div>
-                                              <div class="task-body">Code refactoring and rewriting silly codes and test it</div>
+                                              <div class="task-body">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </div>
                                               <div class="task-creator"><a href="">David Fincher</a></div>
                                               <div class="task-assignedto">assigned to Kim</div>
                                           </li>
