--- a/payment-settings.html
+++ b/payment-settings.html
@@ -47,7 +47,7 @@
         <div class="navbar-header pull-left">
           <a href="#" class="navbar-brand">
             <small>
-              <img src="assets/img/logo.png" alt="" />
+              <img src="assets/img/logo-color.png" alt="" />
             </small>
           </a>
         </div>
@@ -356,7 +356,7 @@
         <li>
           <a href="client.html">
             <i class="menu-icon glyphicon glyphicon-copyright-mark green"></i>
-            <span class="menu-text"> Client </span>
+            <span class="menu-text"> Clients </span>
           </a>
         </li>
         <li>
@@ -369,12 +369,6 @@
           <a href="payment-settings.html">
             <i class="menu-icon fa fa-money blue"></i>
             <span class="menu-text"> Payment Settings </span>
-          </a>
-        </li>
-        <li>
-          <a href="profile.html">
-            <i class="menu-icon fa fa-user purple"></i>
-            <span class="menu-text"> View Profile </span>
           </a>
         </li>
       </ul>
@@ -622,33 +616,14 @@
       <!-- Page Breadcrumb -->
       <div class="page-breadcrumbs">
         <ul class="breadcrumb">
-          <li>
+          <li class="active">
             <i class="fa fa-home"></i>
-            <a href="#">Home</a>
+            <a href="#">Payment Settings</a>
           </li>
-          <li class="active">Payment Settings</li>
         </ul>
       </div>
       <!-- /Page Breadcrumb -->
-      <!-- Page Header -->
-      <div class="page-header position-relative">
-        <div class="header-title">
-          <h1 class="theme-color">
-            Payment Settings
-          </h1>
-        </div>
-        <div class="header-right">
-          <!-- <a type="submit" href="employee-form.html" class="btn cust-btn">Create Employee</a> -->
-        </div>
-        <!--Header Buttons
-        <div class="header-buttons">
-        <a class="sidebar-toggler" href="#">
-        <i class="fa fa-arrows-h"></i>
-      </a>
-    </div>
-    Header Buttons End-->
-  </div>
-  <!-- /Page Header -->
+
   <!-- Page Body -->
   <div class="page-body">
     <div class="row">
