--- a/service-agreement.html
+++ b/service-agreement.html
@@ -53,7 +53,7 @@
                 <div class="navbar-header pull-left">
                     <a href="#" class="navbar-brand">
                         <small>
-                            <img src="assets/img/logo.png" alt="" />
+                            <img src="assets/img/logo-color.png" alt="" />
                         </small>
                     </a>
                 </div>
@@ -367,14 +367,8 @@
                     </li>
                     <li>
                         <a href="client-view-orders.html">
-                            <i class="menu-icon fa fa-eye red"></i>
+                            <i class="menu-icon fa fa-eye yellow"></i>
                             <span class="menu-text"> View Orders </span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="client-profile.html">
-                            <i class="menu-icon glyphicon glyphicon-user yellow"></i>
-                            <span class="menu-text"> View Profile </span>
                         </a>
                     </li>
                 </ul>
@@ -622,33 +616,17 @@
                 <!-- Page Breadcrumb -->
                 <div class="page-breadcrumbs">
                     <ul class="breadcrumb">
-                        <li>
+                        <li class="active">
                             <i class="fa fa-home"></i>
-                            <a href="#">Home</a>
+                            <a href="#">Service Agreement</a>
                         </li>
-                        <li class="active">Service Agreement</li>
                     </ul>
-                </div>
-                <!-- /Page Breadcrumb -->
-                <!-- Page Header -->
-                <div class="page-header position-relative">
-                    <div class="header-title">
-                        <h1 class="theme-color">
-                            Service Agreement
-                        </h1>
-                    </div>
                     <div class="header-right">
                       <a type="submit" href="upload/PIR_Service_Agreement.pdf" target="_blank" class="btn cust-btn"><i class="icon fa fa-download"></i> Service Agreement</a>
                     </div>
-                    <!--Header Buttons
-                    <div class="header-buttons">
-                        <a class="sidebar-toggler" href="#">
-                            <i class="fa fa-arrows-h"></i>
-                        </a>
-                      </div>
-                    Header Buttons End-->
                 </div>
-                <!-- /Page Header -->
+                <!-- /Page Breadcrumb -->
+
                 <!-- Page Body -->
                 <div class="page-body">
                   <div class="row">
@@ -656,7 +634,7 @@
                         <div class="page-view">
                           <div class="btn-style">
                             <button class="button" id="singature-click"><span>Electronic Signature </span></button>
-                            <button class="button pull-right" id="upload-click"><span>Download Signature Form</span></button>
+                            <button class="button pull-right" id="upload-click"><span>Sign & Upload Service Agreement</span></button>
                           </div>
                           <div id="signature-form">
                             <div class="service-agreement scrollbar2 style-2">
@@ -812,7 +790,7 @@
                       			</ul>
                           </form>
                           <div class="text-center">
-                            <a type="submit" class="btn cust-btn text-center mrg-top-25">Save</a>
+                            <a href="" class="btn cust-btn text-center mrg-top-25">Save</a>
                           </div>
                         </div>
                       </div>
