--- a/chat.html
+++ b/chat.html
@@ -3,7 +3,7 @@
 <!-- Head -->
 <head>
     <meta charset="utf-8" />
-    <title>Service Agreement</title>
+    <title>Chat</title>
 
     <meta name="description" content="user profile" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,8 +15,8 @@
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
     <link id="bootstrap-rtl-link" href="" rel="stylesheet" />
     <link href="assets/css/font-awesome.min.css" rel="stylesheet" />
-    <link href="assets/css/upload.css" rel="stylesheet" />
     <link href="assets/css/custom.css" rel="stylesheet" />
+    <link href="assets/css/chat.css" rel="stylesheet" />
     <link href="assets/css/weather-icons.min.css" rel="stylesheet" />
 
     <!--Fonts-->
@@ -31,10 +31,13 @@
 
 
 
+<style class="cp-pen-styles">
+
+
+</style>
+
     <!--Skin Script: Place this script in head to load scripts for skins and rtl support-->
     <script src="assets/js/skins.min.js"></script>
-
-
 </head>
 <!-- /Head -->
 <!-- Body -->
@@ -300,17 +303,17 @@
                                     <img src="assets/img/user.png" class="img-responsive">
                                     </div>
                                     <section>
-                                        <h2><span class="profile"><span>Client</span></span></h2>
+                                        <h2><span class="profile"><span>Admin</span></span></h2>
                                     </section>
                                 </a>
                                 <!--Login Area Dropdown-->
                                 <ul class="pull-right dropdown-menu dropdown-arrow dropdown-login-area">
-                                    <li class="username"><a>Client</a></li>
-                                    <li class="email"><a>client@pir.com</a></li>
+                                    <li class="username"><a>Admin</a></li>
+                                    <li class="email"><a>admin@pir.com</a></li>
                                     <!--Avatar Area-->
 
                                     <li class="edit">
-                                        <a href="client-profile.html" class="pull-right">Edit Profile</a>
+                                        <a href="profile.html" class="pull-right">Edit Profile</a>
                                     </li>
 
                                     <li class="dropdown-footer">
@@ -345,31 +348,37 @@
                 <!-- /Page Sidebar Header -->
                 <!-- Sidebar Menu -->
                 <ul class="nav sidebar-menu">
-                    <!--Dashboard-->
-                    <li>
-                        <a href="client-index.html">
-                            <i class="menu-icon glyphicon glyphicon-dashboard red"></i>
-                            <span class="menu-text"> Dashboard </span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="service-agreement.html">
-                            <i class="menu-icon glyphicon glyphicon-wrench green"></i>
-                            <span class="menu-text"> Service Agreement </span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="research-intake-form.html">
-                            <i class="menu-icon fa fa-file-pdf-o purple"></i>
-                            <span class="menu-text"> Research Intake Form </span>
-                        </a>
-                    </li>
-                    <li class="active">
-                        <a href="client-view-orders.html">
-                            <i class="menu-icon fa fa-eye yellow"></i>
-                            <span class="menu-text"> View Orders </span>
-                        </a>
-                    </li>
+                  <!--Dashboard-->
+                  <li>
+                    <a href="index.html">
+                      <i class="menu-icon glyphicon glyphicon-dashboard red"></i>
+                      <span class="menu-text"> Dashboard </span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="employee.html">
+                      <i class="menu-icon fa fa-users yellow"></i>
+                      <span class="menu-text"> Employees </span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="client.html">
+                      <i class="menu-icon glyphicon glyphicon-copyright-mark green"></i>
+                      <span class="menu-text"> Clients </span>
+                    </a>
+                  </li>
+                  <li class="active">
+                    <a href="jobs.html">
+                      <i class="menu-icon fa fa-info pink"></i>
+                      <span class="menu-text"> Jobs </span>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="payment-settings.html">
+                      <i class="menu-icon fa fa-money blue"></i>
+                      <span class="menu-text"> Payment Settings </span>
+                    </a>
+                  </li>
                 </ul>
                 <!-- /Sidebar Menu -->
             </div>
@@ -388,7 +397,7 @@
                                 <img src="assets/img/avatars/profile.png" />
                             </div>
                             <div class="contact-info">
-                                <div class="contact-name">James Smith</div>
+                                <div class="contact-name">Admin</div>
                                 <div class="contact-status">
                                     <div class="online"></div>
                                     <div class="status">online</div>
@@ -617,7 +626,7 @@
                     <ul class="breadcrumb">
                         <li class="active">
                             <i class="fa fa-home"></i>
-                            <a href="#">View Orders</a>
+                            <a href="#">Chat</a>
                         </li>
                     </ul>
                 </div>
@@ -626,59 +635,173 @@
                 <!-- Page Body -->
                 <div class="page-body">
                   <div class="row">
-                    <div class="col-sm-12 col-lg-12">
-                  <div class="page-view">
-                    <div class="form-title">
-                      View Orders
-                    </div>
-                  <div class="table-responsive">
-                            <table class="table table-striped table-design employee-table">
-                              <thead>
-                                <tr>
-                                  <th>Order Details</th>
-                                  <th>Client Name</th>
-                                  <th>Date</th>
-                                  <th>Status</th>
-                                  <th>Action</th>
-                                </tr>
-                              </thead>
-                              <tbody>
-                                <tr>
-                                  <td>Order Description Details</td>
-                                  <td>James Robert</td>
-                                  <td>14-01-18</td>
-                                  <td>Active</td>
-                                  <td>
-                                      <a href="client-requestmoreinfo.html" data-toggle="tooltip" data-placement="top" data-original-title="view" class="fa fa-eye edit edit-fa"></a>
-                                      <a href="" data-toggle="tooltip" data-placement="top" data-original-title="Download" class="fa fa-download delete edit-fa"></a>
-                                  </td>
-                                </tr>
-                                <tr>
-                                  <td>Smith Description Details</td>
-                                  <td>James Robert</td>
-                                  <td>25-02-18</td>
-                                  <td>Active</td>
-                                  <td>
-                                      <a href="client-requestmoreinfo.html" data-toggle="tooltip" data-placement="top" data-original-title="view" class="fa fa-eye edit edit-fa"></a>
-                                      <a href="" data-toggle="tooltip" data-placement="top" data-original-title="Download" class="fa fa-download delete edit-fa"></a>
-                                  </td>
-                                </tr>
-                                <tr>
-                                  <td>Brand Endorsement Report</td>
-                                  <td>James Robert</td>
-                                  <td>124-03-18</td>
-                                  <td>In Proccess</td>
-                                  <td>
-                                      <a href="client-requestmoreinfo.html" data-toggle="tooltip" data-placement="top" data-original-title="view" class="fa fa-eye edit edit-fa"></a>
-                                      <a href="" data-toggle="tooltip" data-placement="top" data-original-title="Download" class="fa fa-download delete edit-fa"></a>
-                                  </td>
-                                </tr>
-                              </tbody>
-                            </table>
+                      <div class="col-md-12 col-lg-12">
+                        <div class="page-view">
+                          <div class="form-title">
+                            Deep Employee Report
                           </div>
+
+
+<div id="frame">
+	<div id="sidepanel">
+		<div id="profile">
+			<div class="wrap">
+				<img id="profile-img" src="assets/img/user.png" class="online" alt="" />
+				<p>Admin</p>
+				<i class="fa fa-chevron-down expand-button" aria-hidden="true"></i>
+				<div id="status-options">
+					<ul>
+						<li id="status-online" class="active"><span class="status-circle"></span> <p>Online</p></li>
+						<li id="status-away"><span class="status-circle"></span> <p>Away</p></li>
+						<li id="status-busy"><span class="status-circle"></span> <p>Busy</p></li>
+						<li id="status-offline"><span class="status-circle"></span> <p>Offline</p></li>
+					</ul>
+				</div>
+				<div id="expanded">
+					<label for="twitter"><i class="fa fa-facebook fa-fw" aria-hidden="true"></i></label>
+					<input name="twitter" type="text" value="mikeross" />
+					<label for="twitter"><i class="fa fa-twitter fa-fw" aria-hidden="true"></i></label>
+					<input name="twitter" type="text" value="ross81" />
+					<label for="twitter"><i class="fa fa-instagram fa-fw" aria-hidden="true"></i></label>
+					<input name="twitter" type="text" value="mike.ross" />
+				</div>
+			</div>
+		</div>
+
+		<div id="contacts">
+			<ul style="list-style:none;padding-left:0px;">
+				<li class="contact">
+					<div class="wrap">
+						<span class="contact-status online"></span>
+						<img src="assets/img/user.png" alt="" />
+						<div class="meta">
+							<p class="name">Admin</p>
+							<p class="preview">You just got LITT up, Mike.</p>
+						</div>
+					</div>
+				</li>
+				<li class="contact active">
+					<div class="wrap">
+						<span class="contact-status busy"></span>
+						<img src="assets/img/user.png" alt="" />
+						<div class="meta">
+							<p class="name">Employee</p>
+							<p class="preview">Wrong. You take the gun, or you pull out a bigger one. Or, you call their bluff. Or, you do any one of a hundred and forty six other things.</p>
+						</div>
+					</div>
+				</li>
+				<li class="contact">
+					<div class="wrap">
+						<span class="contact-status away"></span>
+						<img src="assets/img/user.png" alt="" />
+						<div class="meta">
+							<p class="name">Client</p>
+							<p class="preview">I was thinking that we could have chicken tonight, sounds good?</p>
+						</div>
+					</div>
+				</li>
+
+			</ul>
+		</div>
+		<div id="bottom-bar">
+			<button id="addcontact"><i class="fa fa-user-plus fa-fw" aria-hidden="true"></i> <span>Add contact</span></button>
+			<button id="settings"><i class="fa fa-cog fa-fw" aria-hidden="true"></i> <span>Settings</span></button>
+		</div>
+	</div>
+	<div class="content">
+		<div class="contact-profile">
+			<img src="assets/img/user.png" alt="" />
+			<p>Admin</p>
+			<!-- <div class="social-media">
+				<i class="fa fa-facebook" aria-hidden="true"></i>
+				<i class="fa fa-twitter" aria-hidden="true"></i>
+				 <i class="fa fa-instagram" aria-hidden="true"></i>
+			</div> -->
+		</div>
+		<div class="messages">
+			<ul>
+				<li class="sent">
+					<img src="assets/img/user.png" alt="" />
+					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.!</p>
+				</li>
+				<li class="replies">
+					<img src="assets/img/user.png" alt="" />
+					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+				</li>
+
+			</ul>
+		</div>
+		<div class="message-input">
+			<div class="wrap">
+			<input type="text" placeholder="Write your message..." />
+			<i class="fa fa-paperclip attachment" aria-hidden="true"></i>
+			<button class="submit"><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
+			</div>
+		</div>
+	</div>
+</div>
+<script src='//production-assets.codepen.io/assets/common/stopExecutionOnTimeout-b2a7b3fe212eaa732349046d8416e00a9dec26eb7fd347590fbced3ab38af52e.js'></script><script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
+<script >$(".messages").animate({ scrollTop: $(document).height() }, "fast");
+
+$("#profile-img").click(function() {
+	$("#status-options").toggleClass("active");
+});
+
+$(".expand-button").click(function() {
+  $("#profile").toggleClass("expanded");
+	$("#contacts").toggleClass("expanded");
+});
+
+$("#status-options ul li").click(function() {
+	$("#profile-img").removeClass();
+	$("#status-online").removeClass("active");
+	$("#status-away").removeClass("active");
+	$("#status-busy").removeClass("active");
+	$("#status-offline").removeClass("active");
+	$(this).addClass("active");
+
+	if($("#status-online").hasClass("active")) {
+		$("#profile-img").addClass("online");
+	} else if ($("#status-away").hasClass("active")) {
+		$("#profile-img").addClass("away");
+	} else if ($("#status-busy").hasClass("active")) {
+		$("#profile-img").addClass("busy");
+	} else if ($("#status-offline").hasClass("active")) {
+		$("#profile-img").addClass("offline");
+	} else {
+		$("#profile-img").removeClass();
+	};
+
+	$("#status-options").removeClass("active");
+});
+
+function newMessage() {
+	message = $(".message-input input").val();
+	if($.trim(message) == '') {
+		return false;
+	}
+	$('<li class="sent"><img src="assets/img/user.png" alt="" /><p>' + message + '</p></li>').appendTo($('.messages ul'));
+	$('.message-input input').val(null);
+	$('.contact.active .preview').html('<span>You: </span>' + message);
+	$(".messages").animate({ scrollTop: $(document).height() }, "fast");
+};
+
+$('.submit').click(function() {
+  newMessage();
+});
+
+$(window).on('keydown', function(e) {
+  if (e.which == 13) {
+    newMessage();
+    return false;
+  }
+});
+//# sourceURL=pen.js
+</script>
+
                         </div>
                       </div>
-                    </div>
+                  </div>
                 </div>
                 <!-- /Page Body -->
             </div>
@@ -689,47 +812,22 @@
 
     </div>
 
+    <!--Basic Scripts-->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/slimscroll/jquery.slimscroll.min.js"></script>
 
+    <!--Beyond Scripts-->
+    <script src="assets/js/beyond.min.js"></script>
+
+    <!--Page Related Scripts-->
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
+    <script src="https://maps.gstatic.com/intl/en_us/mapfiles/api-3/17/0/main.js" type="text/javascript"></script>
+
+    <script src="assets/js/charts/flot/jquery.flot.js"></script>
+    <script src="assets/js/charts/flot/jquery.flot.resize.js"></script>
 
 
 </body>
-<!--Basic Scripts-->
-<script src="assets/js/jquery.min.js"></script>
-<script src="assets/js/bootstrap.min.js"></script>
-<script src="assets/js/slimscroll/jquery.slimscroll.min.js"></script>
-<!--Beyond Scripts-->
-<script src="assets/js/beyond.min.js"></script>
-
-<!--Page Related Scripts-->
-<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
-<script src="https://maps.gstatic.com/intl/en_us/mapfiles/api-3/17/0/main.js" type="text/javascript"></script>
-
-<script src="assets/js/charts/flot/jquery.flot.js"></script>
-<script src="assets/js/charts/flot/jquery.flot.resize.js"></script>
-
-
-
-<!-- jQuery File Upload Dependencies -->
-  <script src="assets/js/upload/jquery.knob.js"></script>
-<script src="assets/js/upload/jquery.ui.widget.js"></script>
-<script src="assets/js/upload/jquery.iframe-transport.js"></script>
-<script src="assets/js/upload/jquery.fileupload.js"></script>
-<script src="assets/js/upload/script.js"></script>
-<script>
-
-$(document).ready(function(){
-  $('#signature-form').show();
-  $('#upload').hide();
-});
-  $('#singature-click').click(function() {
-       $('#upload').hide();
-       $('#signature-form').show();
-
-  });
-  $('#upload-click').click(function() {
-       $('#signature-form').hide();
-       $('#upload').show();
-  });
-</script>
 <!--  /Body -->
 </html>
