--- a/client-register.html
+++ b/client-register.html
@@ -32,7 +32,7 @@
 <!--Body-->
 <body>
   <div class="register-container animated fadeInDown">
-    <div class="registerbox bg-white">
+    <div class="registerbox bg-darkgray">
       <div class="log-reg-img">
         <img src="assets/img/logo-color.png" class="img-responsive">
         <hr class="login-hr" />
@@ -45,7 +45,7 @@
           <div class="col-lg-6 col-sm-6 col-xs-12 padding-right-15">
             <input type="text" class="form-control" placeholder="Name" />
           </div>
-          <div class="col-lg-6 col-sm-6 col-xs-12 no-padding padding-right-15">
+          <div class="col-lg-6 col-sm-6 col-xs-12 no-padding padding-right-15 mbl-pad-lft-15 mbl-mrg-top-10">
             <input type="text" class="form-control" placeholder="Title" />
           </div>
         </div>
@@ -62,7 +62,7 @@
           <div class="col-lg-6 col-sm-6 col-xs-12 padding-right-15">
             <input type="text" class="form-control" placeholder="Email Id" />
           </div>
-          <div class="col-lg-6 col-sm-6 col-xs-12 no-padding padding-right-15">
+          <div class="col-lg-6 col-sm-6 col-xs-12 no-padding padding-right-15 mbl-pad-lft-15 mbl-mrg-top-10">
             <input type="text" class="form-control" placeholder="Phone Number" />
           </div>
         </div>
@@ -103,7 +103,7 @@
   <div class="checkbox">
     <label>
       <input type="checkbox" class="colored-primary" checked="checked">
-      <span class="text darkgray">I agree to the Company <a class="themeprimary">Terms of Service</a> and Privacy Policy</span>
+      <span class="text white">I agree to the Company <a class="themeprimary">Terms of Service</a> and Privacy Policy</span>
     </label>
   </div>
 </div>
