--- a/client.html
+++ b/client.html
@@ -47,7 +47,7 @@
                 <div class="navbar-header pull-left">
                     <a href="#" class="navbar-brand">
                         <small>
-                            <img src="assets/img/logo.png" alt="" />
+                            <img src="assets/img/logo-color.png" alt="" />
                         </small>
                     </a>
                 </div>
@@ -356,7 +356,7 @@
                   <li class="active">
                     <a href="client.html">
                       <i class="menu-icon glyphicon glyphicon-copyright-mark green"></i>
-                      <span class="menu-text"> Client </span>
+                      <span class="menu-text"> Clients </span>
                     </a>
                   </li>
                   <li>
@@ -371,284 +371,24 @@
                       <span class="menu-text"> Payment Settings </span>
                     </a>
                   </li>
-                  <li>
-                    <a href="profile.html">
-                      <i class="menu-icon fa fa-user purple"></i>
-                      <span class="menu-text"> View Profile </span>
-                    </a>
-                  </li>
                 </ul>
                 <!-- /Sidebar Menu -->
             </div>
             <!-- /Page Sidebar -->
-            <!-- Chat Bar -->
-            <div id="chatbar" class="page-chatbar">
-                <div class="chatbar-contacts">
-                    <div class="contacts-search">
-                        <input type="text" class="searchinput" placeholder="Search Contacts" />
-                        <i class="searchicon fa fa-search"></i>
-                        <div class="searchhelper">Search Your Contacts and Chat History</div>
-                    </div>
-                    <ul class="contacts-list">
-                        <li class="contact">
-                            <div class="contact-avatar">
-                                <img src="assets/img/avatars/profile.png" />
-                            </div>
-                            <div class="contact-info">
-                                <div class="contact-name">Admin</div>
-                                <div class="contact-status">
-                                    <div class="online"></div>
-                                    <div class="status">online</div>
-                                </div>
-                                <div class="last-chat-time">
-                                    last week
-                                </div>
-                            </div>
-                        </li>
-                        <li class="contact">
-                            <div class="contact-avatar">
-                                <img src="assets/img/avatars/Nicolai-Larson.jpg" />
-                            </div>
-                            <div class="contact-info">
-                                <div class="contact-name">Adam Johnson</div>
-                                <div class="contact-status">
-                                    <div class="offline"></div>
-                                    <div class="status">left 4 mins ago</div>
-                                </div>
-                                <div class="last-chat-time">
-                                    today
-                                </div>
-                            </div>
-                        </li>
-                        <li class="contact">
-                            <div class="contact-avatar">
-                                <img src="assets/img/avatars/John-Smith.jpg" />
-                            </div>
-                            <div class="contact-info">
-                                <div class="contact-name">John Smith</div>
-                                <div class="contact-status">
-                                    <div class="online"></div>
-                                    <div class="status">online</div>
-                                </div>
-                                <div class="last-chat-time">
-                                    1:57 am
-                                </div>
-                            </div>
-                        </li>
-                        <li class="contact">
-                            <div class="contact-avatar">
-                                <img src="assets/img/avatars/Osvaldus-Valutis.jpg" />
-                            </div>
-                            <div class="contact-info">
-                                <div class="contact-name">Osvaldus Valutis</div>
-                                <div class="contact-status">
-                                    <div class="online"></div>
-                                    <div class="status">online</div>
-                                </div>
-                                <div class="last-chat-time">
-                                    today
-                                </div>
-                            </div>
-                        </li>
-                        <li class="contact">
-                            <div class="contact-avatar">
-                                <img src="assets/img/avatars/Javi-Jimenez.jpg" />
-                            </div>
-                            <div class="contact-info">
-                                <div class="contact-name">Javi Jimenez</div>
-                                <div class="contact-status">
-                                    <div class="online"></div>
-                                    <div class="status">online</div>
-                                </div>
-                                <div class="last-chat-time">
-                                    today
-                                </div>
-                            </div>
-                        </li>
-                        <li class="contact">
-                            <div class="contact-avatar">
-                                <img src="assets/img/avatars/Stephanie-Walter.jpg" />
-                            </div>
-                            <div class="contact-info">
-                                <div class="contact-name">Stephanie Walter</div>
-                                <div class="contact-status">
-                                    <div class="online"></div>
-                                    <div class="status">online</div>
-                                </div>
-                                <div class="last-chat-time">
-                                    yesterday
-                                </div>
-                            </div>
-                        </li>
-                        <li class="contact">
-                            <div class="contact-avatar">
-                                <img src="assets/img/avatars/Sergey-Azovskiy.jpg" />
-                            </div>
-                            <div class="contact-info">
-                                <div class="contact-name">Sergey Azovskiy</div>
-                                <div class="contact-status">
-                                    <div class="offline"></div>
-                                    <div class="status">offline since oct 24</div>
-                                </div>
-                                <div class="last-chat-time">
-                                    22 oct
-                                </div>
-                            </div>
-                        </li>
-                        <li class="contact">
-                            <div class="contact-avatar">
-                                <img src="assets/img/avatars/Lee-Munroe.jpg" />
-                            </div>
-                            <div class="contact-info">
-                                <div class="contact-name">Lee Munroe</div>
-                                <div class="contact-status">
-                                    <div class="online"></div>
-                                    <div class="status">online</div>
-                                </div>
-                                <div class="last-chat-time">
-                                    today
-                                </div>
-                            </div>
-                        </li>
-                        <li class="contact">
-                            <div class="contact-avatar">
-                                <img src="assets/img/avatars/divyia.jpg" />
-                            </div>
-                            <div class="contact-info">
-                                <div class="contact-name">Divyia Philips</div>
-                                <div class="contact-status">
-                                    <div class="online"></div>
-                                    <div class="status">online</div>
-                                </div>
-                                <div class="last-chat-time">
-                                    last week
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-                <div class="chatbar-messages" style="display: none;">
-                    <div class="messages-contact">
-                        <div class="contact-avatar">
-                            <img src="assets/img/avatars/divyia.jpg" />
-                        </div>
-                        <div class="contact-info">
-                            <div class="contact-name">Divyia Philips</div>
-                            <div class="contact-status">
-                                <div class="online"></div>
-                                <div class="status">online</div>
-                            </div>
-                            <div class="last-chat-time">
-                                a moment ago
-                            </div>
-                            <div class="back">
-                                <i class="fa fa-arrow-circle-left"></i>
-                            </div>
-                        </div>
-                    </div>
-                    <ul class="messages-list">
-                        <li class="message">
-                            <div class="message-info">
-                                <div class="bullet"></div>
-                                <div class="contact-name">Me</div>
-                                <div class="message-time">10:14 AM, Today</div>
-                            </div>
-                            <div class="message-body">
-                                Hi, Hope all is good. Are we meeting today?
-                            </div>
-                        </li>
-                        <li class="message reply">
-                            <div class="message-info">
-                                <div class="bullet"></div>
-                                <div class="contact-name">Divyia</div>
-                                <div class="message-time">10:15 AM, Today</div>
-                            </div>
-                            <div class="message-body">
-                                Hi, Hope all is good. Are we meeting today?
-                            </div>
-                        </li>
-                        <li class="message">
-                            <div class="message-info">
-                                <div class="bullet"></div>
-                                <div class="contact-name">Me</div>
-                                <div class="message-time">10:14 AM, Today</div>
-                            </div>
-                            <div class="message-body">
-                                Hi, Hope all is good. Are we meeting today?
-                            </div>
-                        </li>
-                        <li class="message reply">
-                            <div class="message-info">
-                                <div class="bullet"></div>
-                                <div class="contact-name">Divyia</div>
-                                <div class="message-time">10:15 AM, Today</div>
-                            </div>
-                            <div class="message-body">
-                                Hi, Hope all is good. Are we meeting today?
-                            </div>
-                        </li>
-                        <li class="message">
-                            <div class="message-info">
-                                <div class="bullet"></div>
-                                <div class="contact-name">Me</div>
-                                <div class="message-time">10:14 AM, Today</div>
-                            </div>
-                            <div class="message-body">
-                                Hi, Hope all is good. Are we meeting today?
-                            </div>
-                        </li>
-                        <li class="message reply">
-                            <div class="message-info">
-                                <div class="bullet"></div>
-                                <div class="contact-name">Divyia</div>
-                                <div class="message-time">10:15 AM, Today</div>
-                            </div>
-                            <div class="message-body">
-                                Hi, Hope all is good. Are we meeting today?
-                            </div>
-                        </li>
-                    </ul>
-                    <div class="send-message">
-                        <span class="input-icon icon-right">
-                            <textarea rows="4" class="form-control" placeholde <!-- /Page Sidebar --> r="Type your message"></textarea>
-                            <i class="fa fa-camera themeprimary"></i>
-                        </span>
-                    </div>
-                </div>
-            </div>
-            <!-- /Chat Bar -->
+            
             <!-- Page Content -->
             <div class="page-content">
                 <!-- Page Breadcrumb -->
                 <div class="page-breadcrumbs">
                     <ul class="breadcrumb">
-                        <li>
+                        <li class="active">
                             <i class="fa fa-home"></i>
-                            <a href="#">Home</a>
+                            <a href="#">Client</a>
                         </li>
-                        <li class="active">Client</li>
                     </ul>
                 </div>
                 <!-- /Page Breadcrumb -->
-                <!-- Page Header -->
-                <div class="page-header position-relative">
-                    <div class="header-title">
-                        <h1 class="theme-color">
-                            Client
-                        </h1>
-                    </div>
-                    <div class="header-right">
-                      <!-- <a type="submit" href="employee-form.html" class="btn cust-btn">Create Employee</a> -->
-                    </div>
-                    <!--Header Buttons
-                    <div class="header-buttons">
-                        <a class="sidebar-toggler" href="#">
-                            <i class="fa fa-arrows-h"></i>
-                        </a>
-                      </div>
-                    Header Buttons End-->
-                </div>
-                <!-- /Page Header -->
+
                 <!-- Page Body -->
                 <div class="page-body">
                   <div class="row">
@@ -661,14 +401,12 @@
                             <table class="table table-striped table-design employee-table">
                               <thead>
                                 <tr>
-                                  <th>Id</th>
                                   <th>Name</th>
                                   <th>Title</th>
                                   <th>Company</th>
                                   <th>Address</th>
                                   <th>Emai Id</th>
                                   <th>PNO</th>
-                                  <th>B.Address</th>
                                   <th>Country</th>
                                   <th>Suspend</th>
                                   <th>Action</th>
@@ -676,17 +414,15 @@
                               </thead>
                               <tbody>
                                 <tr>
-                                  <td>#100</td>
                                   <td>Jone Lee</td>
                                   <td>Test</td>
                                   <td>VSplash</td>
                                   <td>Washington</td>
                                   <td>Jone.Lee@vsplash.com</td>
                                   <td>(541) 754-3010</td>
-                                  <td>Washington</td>
                                   <td>US</td>
                                   <td>
-                                    <label class="switch switch-flat">
+                                    <label class="switch-btn switch-flat">
                                     	<input class="switch-input" type="checkbox" />
                                     	<span class="switch-label" data-on="Active" data-off="Inactive"></span>
                                     	<span class="switch-handle"></span>
@@ -697,17 +433,15 @@
                                   </td>
                                 </tr>
                                 <tr>
-                                  <td>#101</td>
                                   <td>James strok</td>
                                   <td>Test2</td>
                                   <td>VSplash</td>
                                   <td>Washington</td>
                                   <td>James.strok@vsplash.com</td>
                                   <td>(541) 754-3010</td>
-                                  <td>Washington</td>
                                   <td>US</td>
                                   <td>
-                                    <label class="switch switch-flat">
+                                    <label class="switch-btn switch-flat">
                                     	<input class="switch-input" type="checkbox" />
                                     	<span class="switch-label" data-on="Active" data-off="Inactive"></span>
                                     	<span class="switch-handle"></span>
@@ -718,17 +452,15 @@
                                   </td>
                                 </tr>
                                 <tr>
-                                  <td>#102</td>
                                   <td>Kane</td>
                                   <td>Test3</td>
                                   <td>VSplash</td>
                                   <td>Washington</td>
                                   <td>kane@vsplash.com</td>
                                   <td>(541) 754-3010</td>
-                                  <td>Washington</td>
                                   <td>US</td>
                                   <td>
-                                    <label class="switch switch-flat">
+                                    <label class="switch-btn switch-flat">
                                     	<input class="switch-input" type="checkbox" />
                                     	<span class="switch-label" data-on="Active" data-off="Inactive"></span>
                                     	<span class="switch-handle"></span>
