--- a/employee-jobs.html
+++ b/employee-jobs.html
@@ -47,14 +47,14 @@
                 <div class="navbar-header pull-left">
                     <a href="#" class="navbar-brand">
                         <small>
-                            <img src="assets/img/logo.png" alt="" />
+                            <img src="assets/img/logo-color.png" alt="" />
                         </small>
                     </a>
                 </div>
                 <!-- /Navbar Barnd -->
                 <!-- Sidebar Collapse -->
                 <div class="sidebar-collapse" id="sidebar-collapse">
-                    <i class="collapse-icon fa fa-bars"></i>
+                    <i class="collapse-icon fa fa-caret-down"></i>
                 </div>
                 <!-- /Sidebar Collapse -->
                 <!-- Account Area and Settings --->
@@ -349,7 +349,7 @@
                     </li>
                     <li class="active">
                         <a href="employee-jobs.html">
-                            <i class="menu-icon fa fa-tasks red"></i>
+                            <i class="menu-icon fa fa-briefcase red"></i>
                             <span class="menu-text"> Jobs </span>
                         </a>
                     </li>
@@ -357,12 +357,6 @@
                         <a href="employee-report-upload.html">
                             <i class="menu-icon fa fa-upload green"></i>
                             <span class="menu-text"> Upload Reports </span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="employee-report-upload.html">
-                            <i class="menu-icon fa fa-user yellow"></i>
-                            <span class="menu-text"> View Profile </span>
                         </a>
                     </li>
                 </ul>
@@ -610,40 +604,26 @@
                 <!-- Page Breadcrumb -->
                 <div class="page-breadcrumbs">
                     <ul class="breadcrumb">
-                        <li>
+                        <li class="active">
                             <i class="fa fa-home"></i>
-                            <a href="#">Home</a>
+                            <a href="#">Employee Jobs</a>
                         </li>
-                        <li class="active">Employee Jobs</li>
                     </ul>
                 </div>
                 <!-- /Page Breadcrumb -->
-                <!-- Page Header -->
-                <div class="page-header position-relative">
-                    <div class="header-title">
-                        <h1 class="theme-color">
-                            Employee Jobs
-                        </h1>
-                    </div>
-                    <!--Header Buttons
-                    <div class="header-buttons">
-                        <a class="sidebar-toggler" href="#">
-                            <i class="fa fa-arrows-h"></i>
-                        </a>
-                      </div>
-                    Header Buttons End-->
-                </div>
-                <!-- /Page Header -->
+
                 <!-- Page Body -->
                 <div class="page-body">
                   <div class="row">
                       <div class="col-md-12 col-lg-12">
                         <div class="page-view">
+                          <div class="form-title">
+                            Employee Jobs
+                          </div>
                           <div class="table-responsive mrg-top-10">
                             <table class="table table-striped table-design employee-table">
                               <thead>
                                 <tr>
-                                  <th>Id</th>
                                   <th>Job Title</th>
                                   <th>Description</th>
                                   <th>Date</th>
@@ -652,32 +632,29 @@
                               </thead>
                               <tbody>
                                 <tr>
-                                  <td>#100</td>
                                   <td>Deep Employment Report</td>
                                   <td>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</td>
                                   <td>16-03-2018</td>
-                                  <td>
-                                      <a href="edit-employee.html" data-toggle="tooltip" data-placement="top" data-original-title="View" class="fa fa-eye edit edit-fa"></a>
+                                  <td class="text-center">
+                                      <!-- <a href="edit-employee.html" data-toggle="tooltip" data-placement="top" data-original-title="View" class="fa fa-eye edit edit-fa"></a> -->
                                       <a href="" data-toggle="tooltip" data-placement="top" data-original-title="Download" class="fa fa-download delete edit-fa"></a>
                                   </td>
                                 </tr>
                                 <tr>
-                                  <td>#100</td>
                                   <td>Joyal Employment Report</td>
                                   <td>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</td>
                                   <td>16-03-2018</td>
-                                  <td>
-                                      <a href="edit-employee.html" data-toggle="tooltip" data-placement="top" data-original-title="View" class="fa fa-eye edit edit-fa"></a>
+                                  <td class="text-center">
+                                      <!-- <a href="edit-employee.html" data-toggle="tooltip" data-placement="top" data-original-title="View" class="fa fa-eye edit edit-fa"></a> -->
                                       <a href="" data-toggle="tooltip" data-placement="top" data-original-title="Download" class="fa fa-download delete edit-fa"></a>
                                   </td>
                                 </tr>
                                 <tr>
-                                  <td>#100</td>
                                   <td>James Employment Report</td>
                                   <td>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</td>
                                   <td>16-03-2018</td>
-                                  <td>
-                                      <a href="edit-employee.html" data-toggle="tooltip" data-placement="top" data-original-title="View" class="fa fa-eye edit edit-fa"></a>
+                                  <td class="text-center">
+                                      <!-- <a href="edit-employee.html" data-toggle="tooltip" data-placement="top" data-original-title="View" class="fa fa-eye edit edit-fa"></a> -->
                                       <a href="" data-toggle="tooltip" data-placement="top" data-original-title="Download" class="fa fa-download delete edit-fa"></a>
                                   </td>
                                 </tr>
