--- a/employee.html
+++ b/employee.html
@@ -47,7 +47,7 @@
                 <div class="navbar-header pull-left">
                     <a href="#" class="navbar-brand">
                         <small>
-                            <img src="assets/img/logo.png" alt="" />
+                            <img src="assets/img/logo-color.png" alt="" />
                         </small>
                     </a>
                 </div>
@@ -333,7 +333,7 @@
             <div class="page-sidebar" id="sidebar">
                 <!-- Page Sidebar Header-->
                 <div class="sidebar-header-wrapper">
-                    <input type="text" class="searchinput" />
+                    <input type="text" class="searchinput"/>
                     <i class="searchicon fa fa-search"></i>
                     <div class="searchhelper">Search Reports, Charts, Emails or Notifications</div>
                 </div>
@@ -356,7 +356,7 @@
                   <li>
                     <a href="client.html">
                       <i class="menu-icon glyphicon glyphicon-copyright-mark green"></i>
-                      <span class="menu-text"> Client </span>
+                      <span class="menu-text"> Clients </span>
                     </a>
                   </li>
                   <li>
@@ -369,12 +369,6 @@
                     <a href="payment-settings.html">
                       <i class="menu-icon fa fa-money blue"></i>
                       <span class="menu-text"> Payment Settings </span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="profile.html">
-                      <i class="menu-icon fa fa-user purple"></i>
-                      <span class="menu-text"> View Profile </span>
                     </a>
                   </li>
                 </ul>
@@ -622,33 +616,17 @@
                 <!-- Page Breadcrumb -->
                 <div class="page-breadcrumbs">
                     <ul class="breadcrumb">
-                        <li>
+                        <li class="active">
                             <i class="fa fa-home"></i>
-                            <a href="#">Home</a>
+                            <a href="#">Employee</a>
                         </li>
-                        <li class="active">Employee</li>
                     </ul>
+                    <div class="header-right">
+                       <a type="submit" href="" data-toggle="modal" data-target=".create-employee" class="btn cust-btn">Create Employee</a>
+                    </div>
                 </div>
                 <!-- /Page Breadcrumb -->
-                <!-- Page Header -->
-                <div class="page-header position-relative">
-                    <div class="header-title">
-                        <h1 class="theme-color">
-                            Employee
-                        </h1>
-                    </div>
-                    <div class="header-right">
-                      <!-- <a type="submit" href="employee-form.html" class="btn cust-btn">Create Employee</a> -->
-                    </div>
-                    <!--Header Buttons
-                    <div class="header-buttons">
-                        <a class="sidebar-toggler" href="#">
-                            <i class="fa fa-arrows-h"></i>
-                        </a>
-                      </div>
-                    Header Buttons End-->
-                </div>
-                <!-- /Page Header -->
+
                 <!-- Page Body -->
                 <div class="page-body">
                   <div class="row">
@@ -661,22 +639,18 @@
                             <table class="table table-striped table-design employee-table">
                               <thead>
                                 <tr>
-                                  <th>Employee Id</th>
                                   <th>Name</th>
                                   <th>Email</th>
-                                  <th>Designation</th>
                                   <th>Status</th>
                                   <th>Action</th>
                                 </tr>
                               </thead>
                               <tbody>
                                 <tr>
-                                  <td>#100</td>
                                   <td>Jone Lee</td>
                                   <td>Jone.Lee@pir.com</td>
-                                  <td>Data Proccess Analyst</td>
                                   <td>
-                                    <label class="switch switch-flat">
+                                    <label class="switch-btn switch-flat">
                                     	<input class="switch-input" type="checkbox">
                                     	<span class="switch-label" data-on="Active" data-off="Inactive"></span>
                                     	<span class="switch-handle"></span>
@@ -687,12 +661,10 @@
                                   </td>
                                 </tr>
                                 <tr>
-                                  <td>#101</td>
                                   <td>James smith</td>
                                   <td>James.smith@pir.com</td>
-                                  <td>Data Proccess Analyst</td>
                                   <td>
-                                    <label class="switch switch-flat">
+                                    <label class="switch-btn switch-flat">
                                     	<input class="switch-input" type="checkbox">
                                     	<span class="switch-label" data-on="Active" data-off="Inactive"></span>
                                     	<span class="switch-handle"></span>
@@ -703,12 +675,10 @@
                                   </td>
                                 </tr>
                                 <tr>
-                                  <td>#102</td>
                                   <td>Strok poel</td>
                                   <td>Strok.poel@pir.com</td>
-                                  <td>Data Proccess Analyst</td>
                                   <td>
-                                    <label class="switch switch-flat">
+                                    <label class="switch-btn switch-flat">
                                     	<input class="switch-input" type="checkbox">
                                     	<span class="switch-label" data-on="Active" data-off="Inactive"></span>
                                     	<span class="switch-handle"></span>
@@ -734,7 +704,40 @@
         <!-- Main Container -->
 
     </div>
+    <!-- create employee modal -->
+    <div class="modal fade create-employee in" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-sm">
+                <div class="modal-content">
 
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                        <h4 class="modal-title" id="mySmallModalLabel">Create Employee</h4>
+                    </div>
+                    <div class="modal-body">
+                      <div class="row">
+                        <div class="col-md-12">
+                          <div class="form-group">
+                            <label for="inputsm">Name</label>
+                            <span class="input-icon icon-right">
+                              <input type="password" class="form-control">
+                            </span>
+                          </div>
+                          <div class="form-group">
+                            <label for="inputsm">Email</label>
+                            <span class="input-icon icon-right">
+                              <input type="email" class="form-control">
+                            </span>
+                          </div>
+                          <div class="text-center">
+                          <button type="submit" class="btn cust-btn mrg-btm-10">Send Invitation</button>
+                        </div>
+                        </div>
+                      </div>
+                    </div>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+        </div>
+    <!-- end of create employee modal -->
     <!--Basic Scripts-->
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
