--- a/jobs.html
+++ b/jobs.html
@@ -47,7 +47,7 @@
                 <div class="navbar-header pull-left">
                     <a href="#" class="navbar-brand">
                         <small>
-                            <img src="assets/img/logo.png" alt="" />
+                            <img src="assets/img/logo-color.png" alt="" />
                         </small>
                     </a>
                 </div>
@@ -356,7 +356,7 @@
                   <li>
                     <a href="client.html">
                       <i class="menu-icon glyphicon glyphicon-copyright-mark green"></i>
-                      <span class="menu-text"> Client </span>
+                      <span class="menu-text"> Clients </span>
                     </a>
                   </li>
                   <li class="active">
@@ -369,12 +369,6 @@
                     <a href="payment-settings.html">
                       <i class="menu-icon fa fa-money blue"></i>
                       <span class="menu-text"> Payment Settings </span>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="profile.html">
-                      <i class="menu-icon fa fa-user purple"></i>
-                      <span class="menu-text"> View Profile </span>
                     </a>
                   </li>
                 </ul>
@@ -622,43 +616,27 @@
                 <!-- Page Breadcrumb -->
                 <div class="page-breadcrumbs">
                     <ul class="breadcrumb">
-                        <li>
+                        <li class="active">
                             <i class="fa fa-home"></i>
-                            <a href="#">Home</a>
+                            <a href="#">Jobs</a>
                         </li>
-                        <li class="active">Jobs</li>
                     </ul>
                 </div>
                 <!-- /Page Breadcrumb -->
-                <!-- Page Header -->
-                <div class="page-header position-relative">
-                    <div class="header-title">
-                        <h1 class="theme-color">
-                            Jobs Informations
-                        </h1>
-                    </div>
-                    <div class="header-right">
-                      <!-- <a type="submit" href="employee-form.html" class="btn cust-btn">Create Employee</a> -->
-                    </div>
-                    <!--Header Buttons
-                    <div class="header-buttons">
-                        <a class="sidebar-toggler" href="#">
-                            <i class="fa fa-arrows-h"></i>
-                        </a>
-                      </div>
-                    Header Buttons End-->
-                </div>
-                <!-- /Page Header -->
+
                 <!-- Page Body -->
                 <div class="page-body">
+
                   <div class="row">
                       <div class="col-md-12 col-lg-12">
                         <div class="page-view">
+                          <div class="form-title">
+                                    Jobs Information
+                                  </div>
                           <div class="table-responsive mrg-top-10">
                             <table class="table table-striped table-design employee-table">
                               <thead>
                                 <tr>
-                                  <th>Id</th>
                                   <th>Job Title</th>
                                   <th>Job Description</th>
                                   <th>Assigned to</th>
@@ -668,12 +646,11 @@
                               </thead>
                               <tbody>
                                 <tr>
-                                  <td>#100</td>
                                   <td>Deep Employee Report</td>
                                   <td>Deep Employment Report</td>
                                   <td>James</td>
                                   <td>
-                                    <label class="switch switch-flat">
+                                    <label class="switch-btn switch-flat">
                                     	<input class="switch-input" type="checkbox" />
                                     	<span class="switch-label" data-on="Active" data-off="Inactive"></span>
                                     	<span class="switch-handle"></span>
@@ -685,12 +662,11 @@
                                   </td>
                                 </tr>
                                 <tr>
-                                  <td>#100</td>
-                                  <td>Deep Employee Report</td>
-                                  <td>Deep Employment Report</td>
-                                  <td>James</td>
+                                    <td>Brand Endorsement Report</td>
+                                  <td>Brand Endorsement Report</td>
+                                  <td>Roy</td>
                                   <td>
-                                    <label class="switch switch-flat">
+                                    <label class="switch-btn switch-flat">
                                     	<input class="switch-input" type="checkbox" />
                                     	<span class="switch-label" data-on="Active" data-off="Inactive"></span>
                                     	<span class="switch-handle"></span>
@@ -702,12 +678,11 @@
                                   </td>
                                 </tr>
                                 <tr>
-                                  <td>#100</td>
-                                  <td>Deep Employee Report</td>
-                                  <td>Deep Employment Report</td>
-                                  <td>James</td>
+                                  <td>Smith Employee Profile Report</td>
+                                  <td>Smith Employee Profile Report</td>
+                                  <td>Riya</td>
                                   <td>
-                                    <label class="switch switch-flat">
+                                    <label class="switch-btn switch-flat">
                                     	<input class="switch-input" type="checkbox" />
                                     	<span class="switch-label" data-on="Active" data-off="Inactive"></span>
                                     	<span class="switch-handle"></span>
