--- a/login-client.html
+++ b/login-client.html
@@ -44,58 +44,18 @@
       <div class="loginbox-textbox">
         <input type="text" class="form-control" placeholder="Password" />
       </div>
-      <div class="cust-overflow">
-      <div class="loginbox-remember">
-        <div class="checkbox">
-          <label>
-            <input type="checkbox" class="colored-primary" id="terms-conditions">
-            <span class="text white">Remember Password</span>
-          </label>
-        </div>
-      </div>
       <div class="loginbox-forgot">
-        <a type="submit" href="" data-toggle="modal" data-target=".forgotpwd" id="CustBtn" class="btn cust-btn">Forgot Password?</a>
+        <a href="">Forgot Password?</a>
       </div>
-    </div>
-      <div class="loginbox-submit text-center">
+      <div class="loginbox-submit">
         <input type="button" class="btn btn-block cust-btn" value="Login">
       </div>
-      <div class="loginbox-or">
-        <div class="or-line"></div>
-        <div class="or">OR</div>
-      </div>
       <div class="loginbox-signup">
-        <span class="white">Client ?</span> <a href="client-register.html">Register</a>
+        <a href="client-register.html">Create an account...?</a>
       </div>
     </div>
 
   </div>
-  <div class="modal fade forgotpwd in" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
-          <div class="modal-dialog modal-sm">
-              <div class="modal-content">
-
-                  <div class="modal-header">
-                      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                      <h4 class="modal-title" id="mySmallModalLabel">Forgot Password</h4>
-                  </div>
-                  <div class="modal-body">
-                    <form class="">
-                      <div class="col-md-12">
-                        <div class="form-group">
-                          <label for="inputsm">Email</label>
-                          <span class="input-icon icon-right">
-                            <input type="email" class="form-control">
-                          </span>
-                        </div>
-                        <div class="text-center">
-                        <button type="submit" class="btn cust-btn mrg-btm-10">Submit</button>
-                      </div>
-                      </div>
-                    </form>
-                  </div>
-              </div><!-- /.modal-content -->
-          </div><!-- /.modal-dialog -->
-      </div>
 
   <!--Basic Scripts-->
   <script src="assets/js/jquery.min.js"></script>
